Stuff Part 2: Electric Boogaloo
- Replaced water.css with custom styles
- Finished frontend milestone display
- Other stuff idk

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+    <link rel="stylesheet" href="/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <title>OwO Counter Bot</title>
 </head>
 
 <body>
     <h3>OwO Counter: <span style="display: inline-block;" id="counter" class="animate__animated">0</span></h3>
+    <h3 id="milestone" style="opacity: 0">New milestone reached: <span style="display: inline-block;" id="milestonenum">0</span></h3>
     <script src="/front.js"></script>
 </body>
 
