--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-    <h3>OwO Counter: <span style="display: inline-block;" id="counter" class="animate__animated">0</span></h3>
-    <h3 id="milestone" style="opacity: 0">New milestone reached: <span style="display: inline-block;" id="milestonenum">0</span></h3>
+    <h3>OwO Counter</h3>
+    <h3>Current Stream: <span style="display: inline-block;" id="counter" class="animate__animated">0</span> <span id="milestone" style="display: none">New milestone reached: <span style="display: inline-block;" id="milestonenum">0</span></span></h3>
+    <h3 style="display: inline-block;">Lifetime Count: <span style="display: inline-block;" id="lifetime" class="animate__animated">0</span></h3>
     <script src="/front.js"></script>
 </body>
 
