Added high score display

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
     <h3>OwO Counter</h3>
     <h3>Current Stream: <span style="display: inline-block;" id="counter" class="animate__animated">0</span> <span id="milestone" style="display: none">New milestone reached: <span style="display: inline-block;" id="milestonenum">0</span></span></h3>
+    <h3>High Score: <span style="display: inline-block;" id="hiscore" class="animate__animated">0</span> <span id="hiscoretext" style="display: none" class="animate__animated">New high score!</span></h3>
     <h3 style="display: inline-block;">Lifetime Count: <span style="display: inline-block;" id="lifetime" class="animate__animated">0</span></h3>
     <script src="/front.js"></script>
 </body>
